chore: criar arquivos ,env e colocar nova dependencia no pom

--- a/pom.xml
+++ b/pom.xml
@@ -132,6 +132,21 @@
 		</dependency>
 		<!-- -->
 
+		<!-- .env -->
+		<dependency>
+			<groupId>io.github.cdimascio</groupId>
+			<artifactId>dotenv-java</artifactId>
+			<version>2.2.0</version>
+		</dependency>
+		<!-- -->
+
+		<!-- Swagger -->
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.7.0</version>
+		</dependency>
+		<!-- -->
 
 	</dependencies>
 
